fix: added github action emulator runner for virtual machine

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,4 +39,7 @@ jobs:
         run: ./gradlew test
 
       - name: Build and run UI tests
-        run: ./gradlew connectedAndroidTest
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          script: ./gradlew connectedAndroidTest
