--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,47 +1,81 @@
-name: ci-test
+name: CI
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
-  connected-tests:
-    runs-on: macos-latest
-
+  ui-test:
+    runs-on: ubuntu-latest
+    services:
+      xvfb:
+        image: 'ubuntu:20.04'
+        options: '--privileged'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '11'
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build and run unit tests
-        run: ./gradlew test
-
-      - name: Build and run UI tests
-        uses: ReactiveCircus/android-emulator-runner@v2
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
         with:
           api-level: 30
-          target: google_apis
-          arch: x86_64
-          script: ./gradlew connectedAndroidTest
+          build-tools: 30.0.3
+
+      - name: Start Android Emulator
+        run: |
+          sudo apt-get install qemu-kvm -y
+          sdkmanager "system-images;android-30;google_apis;x86_64"
+          echo "no" | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --device "Nexus 6P"
+          nohup emulator -avd test -no-window -no-audio -no-boot-anim -accel auto -gpu swiftshader_indirect &
+          adb wait-for-device
+          adb shell input keyevent 82 &
+
+      - name: Wait for Android Emulator to finish booting
+        run: |
+          EMULATOR_BOOTED=0
+          ADB_BOOT_WAIT_TRIES=20
+          until [ "$EMULATOR_BOOTED" -eq 1 ] || [ "$ADB_BOOT_WAIT_TRIES" -eq 0 ]; do
+            EMULATOR_BOOTED=$(adb shell getprop sys.boot_completed 2>/dev/null)
+            if [ "$EMULATOR_BOOTED" -eq 1 ]; then
+              echo "Emulator booted."
+            else
+              echo "Waiting for emulator to boot..."
+              sleep 15
+              ADB_BOOT_WAIT_TRIES=$((ADB_BOOT_WAIT_TRIES - 1))
+            fi
+          done
+          if [ "$EMULATOR_BOOTED" -ne 1 ]; then
+            echo "Emulator failed to boot in time." >&2
+            exit 1
+          fi
+
+      - name: Run UI Tests
+        run: ./gradlew connectedAndroidTest
+
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Unit Tests
+        run: ./gradlew test
