--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   ui-tests:
     runs-on: macos-latest
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -24,12 +23,12 @@ jobs:
           cache: 'gradle'
         
       - name: Run connected tests
-        uses: ReactiveCircus/android-emulator-runner@v2
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
           target: google_apis
           arch: x86_64
-          script: ./gradlew connectedCheck
+          script: ./gradlew connectedAndroidTest
 
   unit-tests:
     runs-on: ubuntu-latest
